updated with the latest required test cases and other requirements

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ GEMINI_MODEL=gemini-1.5-flash
 # Agent behavior
 AGENT_MAX_HISTORY_MESSAGES=12
 LLM_TIMEOUT_SECONDS=10
+ENABLE_LLM_BEHAVIOR_ANALYSIS=true
 
 # Structured extraction (LLM) (optional)
 ENABLE_LLM_EXTRACTION=true
@@ -38,4 +39,3 @@ HONEY_POT_EXTENDED_RESPONSE=false
 
 # Server port
 PORT=8000
-
