--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,12 @@ GEMINI_MODEL=gemini-1.5-flash
 AGENT_MAX_HISTORY_MESSAGES=12
 LLM_TIMEOUT_SECONDS=10
 ENABLE_LLM_BEHAVIOR_ANALYSIS=true
+HIGH_LOAD_MODE=false
+LLM_GLOBAL_RPM_LIMIT=26
+LLM_REPLY_RPM_LIMIT=18
+LLM_BEHAVIOR_RPM_LIMIT=8
+LLM_EXTRACTION_RPM_LIMIT=6
+LLM_BEHAVIOR_SAMPLE_EVERY_N_SCAM_MESSAGES=2
 
 # Structured extraction (LLM) (optional)
 ENABLE_LLM_EXTRACTION=true
