session closure for inavtivity

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ LLM_BEHAVIOR_SAMPLE_EVERY_N_SCAM_MESSAGES=2
 # Structured extraction (LLM) (optional)
 ENABLE_LLM_EXTRACTION=true
 LLM_EXTRACTION_MIN_INTERVAL_SECONDS=15
+INACTIVITY_FINALIZE_SECONDS=120
 
 # Session store (in-memory) cleanup
 SESSION_TTL_SECONDS=21600
